crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/storage_specifier_after_inheritance/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.29'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/ContractDefinition/storage_specifier_after_inheritance/input.sol:2:21]
   │
 2 │ contract Foo is Bar layout at 0 {
   │                     ─────┬─────  
   │                          ╰─────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 129..137,
                    },
                    name: Identifier {
                        range: 138..141,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [
                            InheritanceSpecifier(
                                InheritanceSpecifierStruct {
                                    is_keyword: IsKeyword {
                                        range: 142..144,
                                    },
                                    types: InheritanceTypes {
                                        elements: [
                                            InheritanceTypeStruct {
                                                type_name: IdentifierPath {
                                                    elements: [
                                                        Identifier(
                                                            Identifier {
                                                                range: 145..148,
                                                            },
                                                        ),
                                                    ],
                                                },
                                                arguments: None,
                                            },
                                        ],
                                    },
                                },
                            ),
                            StorageLayoutSpecifier(
                                StorageLayoutSpecifierStruct {
                                    layout_keyword: LayoutKeyword {
                                        range: 149..155,
                                    },
                                    at_keyword: AtKeyword {
                                        range: 156..158,
                                    },
                                    expression: DecimalNumberExpression(
                                        DecimalNumberExpressionStruct {
                                            literal: DecimalLiteral {
                                                range: 159..160,
                                            },
                                            unit: None,
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                    open_brace: OpenBrace {
                        range: 161..162,
                    },
                    members: ContractMembers {
                        elements: [],
                    },
                    close_brace: CloseBrace {
                        range: 163..164,
                    },
                },
            ),
        ],
    },
}
